css/styles.css
/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
/* Document
   ========================================================================== */
/**
 * 1. Correct the line height in all browsers.
 * 2. Prevent adjustments of font size after orientation changes in iOS.
 */
html {
  line-height: 1.15; /* 1 */
  -webkit-text-size-adjust: 100%; /* 2 */
}

/* Sections
   ========================================================================== */
/**
 * Remove the margin in all browsers.
 */
body {
  margin: 0;
}

/**
 * Render the `main` element consistently in IE.
 */
main {
  display: block;
}

/**
 * Correct the font size and margin on `h1` elements within `section` and
 * `article` contexts in Chrome, Firefox, and Safari.
 */
h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

/* Grouping content
   ========================================================================== */
/**
 * 1. Add the correct box sizing in Firefox.
 * 2. Show the overflow in Edge and IE.
 */
hr {
  box-sizing: content-box; /* 1 */
  height: 0; /* 1 */
  overflow: visible; /* 2 */
}

/**
 * 1. Correct the inheritance and scaling of font size in all browsers.
 * 2. Correct the odd `em` font sizing in all browsers.
 */
pre {
  font-family: monospace, monospace; /* 1 */
  font-size: 1em; /* 2 */
}

/* Text-level semantics
   ========================================================================== */
/**
 * Remove the gray background on active links in IE 10.
 */
a {
  background-color: transparent;
}

/**
 * 1. Remove the bottom border in Chrome 57-
 * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
 */
abbr[title] {
  border-bottom: none; /* 1 */
  text-decoration: underline; /* 2 */
  -webkit-text-decoration: underline dotted;
          text-decoration: underline dotted; /* 2 */
}

/**
 * Add the correct font weight in Chrome, Edge, and Safari.
 */
b,
strong {
  font-weight: bolder;
}

/**
 * 1. Correct the inheritance and scaling of font size in all browsers.
 * 2. Correct the odd `em` font sizing in all browsers.
 */
code,
kbd,
samp {
  font-family: monospace, monospace; /* 1 */
  font-size: 1em; /* 2 */
}

/**
 * Add the correct font size in all browsers.
 */
small {
  font-size: 80%;
}

/**
 * Prevent `sub` and `sup` elements from affecting the line height in
 * all browsers.
 */
sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sub {
  bottom: -0.25em;
}

sup {
  top: -0.5em;
}

/* Embedded content
   ========================================================================== */
/**
 * Remove the border on images inside links in IE 10.
 */
img {
  border-style: none;
}

/* Forms
   ========================================================================== */
/**
 * 1. Change the font styles in all browsers.
 * 2. Remove the margin in Firefox and Safari.
 */
button,
input,
optgroup,
select,
textarea {
  font-family: inherit; /* 1 */
  font-size: 100%; /* 1 */
  line-height: 1.15; /* 1 */
  margin: 0; /* 2 */
}

/**
 * Show the overflow in IE.
 * 1. Show the overflow in Edge.
 */
button,
input { /* 1 */
  overflow: visible;
}

/**
 * Remove the inheritance of text transform in Edge, Firefox, and IE.
 * 1. Remove the inheritance of text transform in Firefox.
 */
button,
select { /* 1 */
  text-transform: none;
}

/**
 * Correct the inability to style clickable types in iOS and Safari.
 */
button,
[type=button],
[type=reset],
[type=submit] {
  -webkit-appearance: button;
  -moz-appearance: button;
       appearance: button;
}

/**
 * Remove the inner border and padding in Firefox.
 */
button::-moz-focus-inner,
[type=button]::-moz-focus-inner,
[type=reset]::-moz-focus-inner,
[type=submit]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

/**
 * Restore the focus styles unset by the previous rule.
 */
button:-moz-focusring,
[type=button]:-moz-focusring,
[type=reset]:-moz-focusring,
[type=submit]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

/**
 * Correct the padding in Firefox.
 */
fieldset {
  padding: 0.35em 0.75em 0.625em;
}

/**
 * 1. Correct the text wrapping in Edge and IE.
 * 2. Correct the color inheritance from `fieldset` elements in IE.
 * 3. Remove the padding so developers are not caught out when they zero out
 *    `fieldset` elements in all browsers.
 */
legend {
  box-sizing: border-box; /* 1 */
  color: inherit; /* 2 */
  display: table; /* 1 */
  max-width: 100%; /* 1 */
  padding: 0; /* 3 */
  white-space: normal; /* 1 */
}

/**
 * Add the correct vertical alignment in Chrome, Firefox, and Opera.
 */
progress {
  vertical-align: baseline;
}

/**
 * Remove the default vertical scrollbar in IE 10+.
 */
textarea {
  overflow: auto;
}

/**
 * 1. Add the correct box sizing in IE 10.
 * 2. Remove the padding in IE 10.
 */
[type=checkbox],
[type=radio] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
}

/**
 * Correct the cursor style of increment and decrement buttons in Chrome.
 */
[type=number]::-webkit-inner-spin-button,
[type=number]::-webkit-outer-spin-button {
  height: auto;
}

/**
 * 1. Correct the odd appearance in Chrome and Safari.
 * 2. Correct the outline style in Safari.
 */
[type=search] {
  -webkit-appearance: textfield; /* 1 */
  -moz-appearance: textfield;
       appearance: textfield;
  outline-offset: -2px; /* 2 */
}

/**
 * Remove the inner padding in Chrome and Safari on macOS.
 */
[type=search]::-webkit-search-decoration {
  -webkit-appearance: none;
}

/**
 * 1. Correct the inability to style clickable types in iOS and Safari.
 * 2. Change font properties to `inherit` in Safari.
 */
::-webkit-file-upload-button {
  -webkit-appearance: button; /* 1 */
  font: inherit; /* 2 */
}

/* Interactive
   ========================================================================== */
/*
 * Add the correct display in Edge, IE 10+, and Firefox.
 */
details {
  display: block;
}

/*
 * Add the correct display in all browsers.
 */
summary {
  display: list-item;
}

/* Misc
   ========================================================================== */
/**
 * Add the correct display in IE 10+.
 */
template {
  display: none;
}

/**
 * Add the correct display in IE 10.
 */
[hidden] {
  display: none;
}

/* Prevent adjustments of font size after orientation changes.  */
html {
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  height: 100%;
}

/*---- apply a natural box layout model to all elements -------*/
* {
  box-sizing: border-box;
}

body {
  height: 100%;
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  color: #333;
}

#headerWrapper {
  background: white;
  color: rgb(0, 183, 255);
}

header {
  display: flex;
  align-items: flex-end;
  justify-content: left;
  padding: 1rem 16px;
  gap: 8px;
}
header h1 {
  margin: auto 0;
  text-align: left;
  font-size: 1.2rem;
  font-weight: 800;
  font-family: "Pacifico", cursive;
  font-weight: 400;
  font-style: normal;
  color: black;
}

/*Navigation stuff goes here*/
#navWrapper {
  background-color: rgb(0, 183, 255);
}

nav button {
  padding: 0.5rem;
  background: transparent;
  border: none;
  font-size: 1.5rem;
  color: rgba(255, 255, 255, 0.9);
}
nav ul {
  display: none;
  list-style-type: none;
  padding: 0;
  margin: 0;
  border-top: solid 1px rgba(255, 255, 255, 0.3);
}
nav ul li {
  border-bottom: solid 1px rgba(255, 255, 255, 0.3);
}
nav ul li a {
  display: block;
  padding: 0.75rem;
  color: white;
  text-align: center;
  text-decoration: none;
}
nav ul li a:hover {
  background-color: #00a8eb;
  color: orange;
}
nav ul li.active a {
  background-color: #009ad6;
}
nav ul.open {
  display: block;
}

main img {
  width: 100%;
  height: auto;
}

.row {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 1rem 0;
  padding: 0 8px;
}

.column {
  padding: 0 8px;
  margin: 8px 0;
}

.small-1 {
  flex-basis: 8.3333333333%;
}

.small-2 {
  flex-basis: 16.6666666667%;
}

.small-3 {
  flex-basis: 25%;
}

.small-4 {
  flex-basis: 33.3333333333%;
}

.small-5 {
  flex-basis: 41.6666666667%;
}

.small-6 {
  flex-basis: 50%;
}

.small-7 {
  flex-basis: 58.3333333333%;
}

.small-8 {
  flex-basis: 66.6666666667%;
}

.small-9 {
  flex-basis: 75%;
}

.small-10 {
  flex-basis: 83.3333333333%;
}

.small-11 {
  flex-basis: 91.6666666667%;
}

.small-12 {
  flex-basis: 100%;
}

.line, .round, .fill, .shadow {
  padding: 8px 8px;
}

.line {
  border: 1px #1c2020 solid;
}

.round {
  border-radius: 9px;
}

.fill {
  background-color: #ffaeeb;
}

.shadow {
  box-shadow: 0 0 10px #c0c0c0;
}

.left {
  justify-content: left;
}

.center {
  margin: auto;
  align-items: center;
}

#footerWrapper {
  background-color: black;
  color: white;
}

footer {
  padding: 0.5rem 16px;
}
footer p {
  margin: 0;
  font-weight: 300;
  text-align: center;
}

@media only screen and (min-width: 35rem) {
  header {
    padding: 2rem 16px;
  }
  header h1 {
    font-size: 2rem;
  }
  .medium-1 {
    flex-basis: 8.3333333333%;
  }
  .medium-2 {
    flex-basis: 16.6666666667%;
  }
  .medium-3 {
    flex-basis: 25%;
  }
  .medium-4 {
    flex-basis: 33.3333333333%;
  }
  .medium-5 {
    flex-basis: 41.6666666667%;
  }
  .medium-6 {
    flex-basis: 50%;
  }
  .medium-7 {
    flex-basis: 58.3333333333%;
  }
  .medium-8 {
    flex-basis: 66.6666666667%;
  }
  .medium-9 {
    flex-basis: 75%;
  }
  .medium-10 {
    flex-basis: 83.3333333333%;
  }
  .medium-11 {
    flex-basis: 91.6666666667%;
  }
  .medium-12 {
    flex-basis: 100%;
  }
}
@media only screen and (min-width: 60rem) {
  header, nav, main, footer {
    max-width: 60rem;
    margin: auto;
  }
  /*Navigation stuff goes here*/
  Nav button {
    display: none;
  }
  Nav ul, Nav ul.open {
    margin-left: 2vw;
    display: flex;
    border: none;
  }
  Nav ul li, Nav ul.open li {
    border: none;
  }
  .large-1 {
    flex-basis: 8.3333333333%;
  }
  .large-2 {
    flex-basis: 16.6666666667%;
  }
  .large-3 {
    flex-basis: 25%;
  }
  .large-4 {
    flex-basis: 33.3333333333%;
  }
  .large-5 {
    flex-basis: 41.6666666667%;
  }
  .large-6 {
    flex-basis: 50%;
  }
  .large-7 {
    flex-basis: 58.3333333333%;
  }
  .large-8 {
    flex-basis: 66.6666666667%;
  }
  .large-9 {
    flex-basis: 75%;
  }
  .large-10 {
    flex-basis: 83.3333333333%;
  }
  .large-11 {
    flex-basis: 91.6666666667%;
  }
  .large-12 {
    flex-basis: 100%;
  }
}

